@@ -1,17 +1,16 @@
 package com.server.youthtalktalk.domain.comment.service;
 
 import com.server.youthtalktalk.domain.comment.dto.CommentDto;
+import com.server.youthtalktalk.domain.comment.dto.LikeCommentDto;
 import com.server.youthtalktalk.domain.comment.dto.MyCommentDto;
-import com.server.youthtalktalk.domain.comment.dto.PolicyCommentDto;
-import com.server.youthtalktalk.domain.comment.dto.PostCommentDto;
 import com.server.youthtalktalk.domain.comment.entity.Comment;
 import com.server.youthtalktalk.domain.comment.entity.PolicyComment;
 import com.server.youthtalktalk.domain.comment.entity.PostComment;
 import com.server.youthtalktalk.domain.comment.repository.CommentRepository;
 import com.server.youthtalktalk.domain.likes.entity.Likes;
 import com.server.youthtalktalk.domain.likes.repository.LikeRepository;
-import com.server.youthtalktalk.domain.member.entity.Block;
 import com.server.youthtalktalk.domain.member.entity.Member;
+import com.server.youthtalktalk.domain.member.repository.BlockRepository;
 import com.server.youthtalktalk.domain.member.repository.MemberRepository;
 import com.server.youthtalktalk.domain.notification.entity.NotificationDetail;
 import com.server.youthtalktalk.domain.notification.entity.NotificationType;
@@ -20,14 +19,17 @@ import com.server.youthtalktalk.domain.policy.entity.Policy;
 import com.server.youthtalktalk.domain.policy.repository.PolicyRepository;
 import com.server.youthtalktalk.domain.post.entity.Post;
 import com.server.youthtalktalk.domain.post.repostiory.PostRepository;
-import com.server.youthtalktalk.global.response.BaseResponseCode;
-import com.server.youthtalktalk.global.response.exception.BusinessException;
+import com.server.youthtalktalk.domain.report.entity.CommentReport;
+import com.server.youthtalktalk.domain.report.repository.ReportRepository;
 import com.server.youthtalktalk.global.response.exception.InvalidValueException;
 import com.server.youthtalktalk.global.response.exception.comment.AlreadyLikedException;
 import com.server.youthtalktalk.global.response.exception.comment.CommentLikeNotFoundException;
 import com.server.youthtalktalk.global.response.exception.comment.CommentNotFoundException;
 import com.server.youthtalktalk.global.response.exception.policy.PolicyNotFoundException;
 import com.server.youthtalktalk.global.response.exception.post.PostNotFoundException;
+import java.time.format.DateTimeFormatter;
+import java.util.Comparator;
+import java.util.HashSet;
 import java.util.Set;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -35,7 +37,6 @@ import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -47,11 +48,17 @@ import static com.server.youthtalktalk.global.response.BaseResponseCode.INVALID_
 @RequiredArgsConstructor
 public class CommentServiceImpl implements CommentService {
 
+    public static final String DELETED_WRITER = "알 수 없음";
+    public static final String DEFAULT_PROFILE = "기본 이미지";
+    public static final String TIME_FORMAT = "yyyy-MM-dd HH:mm:ss";
+
     private final CommentRepository commentRepository;
     private final PolicyRepository policyRepository;
     private final PostRepository postRepository;
     private final LikeRepository likeRepository;
     private final MemberRepository memberRepository;
+    private final ReportRepository reportRepository;
+    private final BlockRepository blockRepository;
     private final ApplicationEventPublisher eventPublisher;
 
     /**
@@ -95,29 +102,55 @@ public class CommentServiceImpl implements CommentService {
     }
 
     /**
-     * 정책 댓글 조회
+     * 정책 댓글 조회 (오래된 순)
      */
     @Override
-    public List<PolicyComment> getPolicyComments(Long policyId) {
+    public List<PolicyComment> getPolicyComments(Long policyId, Member member) {
         if (!policyRepository.existsByPolicyId(policyId)) {
             throw new PolicyNotFoundException();
         }
-        return commentRepository.findPolicyCommentsByPolicyIdOrderByCreatedAtAsc(policyId);
+        List<PolicyComment> policyComments = commentRepository.findPolicyCommentsByPolicyId(policyId);
+        Set<Comment> excludedComments = getExcludedComments(member); // 신고한 댓글 + 차단한 유저의 댓글
+
+        return policyComments.stream()
+                .filter(comment -> !excludedComments.contains(comment))
+                .sorted(Comparator.comparing(PolicyComment::getCreatedAt)) // 오래된 순 정렬
+                .collect(Collectors.toList());
     }
 
     /**
-     * 게시글 댓글 조회
+     * 게시글 댓글 조회 (오래된 순)
      */
     @Override
-    public List<PostComment> getPostComments(Long postId) {
+    public List<PostComment> getPostComments(Long postId, Member member) {
         if (!postRepository.existsById(postId)) {
             throw new PostNotFoundException();
         }
-        return commentRepository.findPostCommentsByPostIdOrderByCreatedAtAsc(postId);
+        List<PostComment> postComments = commentRepository.findPostCommentsByPostId(postId);
+        Set<Comment> excludedComments = getExcludedComments(member); // 신고한 댓글 + 차단한 유저의 댓글
+
+        return postComments.stream()
+                .filter(comment -> !excludedComments.contains(comment))
+                .sorted(Comparator.comparing(PostComment::getCreatedAt)) // 오래된 순 정렬
+                .collect(Collectors.toList());
+    }
+
+    public Set<Comment> getExcludedComments(Member member) {
+        // 차단한 유저들의 댓글
+        List<Comment> blockedComments = blockRepository.findBlockedMembersByBlocker(member).stream()
+                .flatMap(blockedMember -> blockedMember.getComments().stream()).toList();
+
+        // 신고한 댓글
+        List<Comment> reportedComments = reportRepository.findCommentReportsByReporter(member).stream()
+                .map(CommentReport::getComment).toList();
+
+        Set<Comment> excludedComments = new HashSet<>(blockedComments); // 중복 제거
+        excludedComments.addAll(reportedComments);
+        return excludedComments;
     }
 
     /**
-     * 회원이 작성한 댓글 조회
+     * 회원이 작성한 댓글 조회 (최신순)
      */
     @Override
     public List<Comment> getMyComments(Member member) {
@@ -125,50 +158,76 @@ public class CommentServiceImpl implements CommentService {
     }
 
     /**
-     * 회원이 좋아요한 댓글 조회
+     * 회원이 좋아요한 댓글 조회 (최신순)
      */
     @Override
     public List<Comment> getLikedComments(Member member) {
         return likeRepository.findAllByMemberOrderByCreatedAtDesc(member)
-                .stream().map(Likes::getComment).collect(Collectors.toList());
+                .stream().map(Likes::getComment).toList();
     }
 
     /**
-     * 연관엔티티 id 없는 CommentDto로 변환
+     * 게시글/정책 댓글 조회용 DTO 리스트로 변환
      */
     @Override
     public List<CommentDto> toCommentDtoList(List<? extends Comment> comments, Member member) {
-        Set<Member> blockedMembers = member.getBlocks().stream().map(Block::getBlockedMember).collect(Collectors.toSet());
-
         return comments.stream()
-                .filter(comment -> !blockedMembers.contains(comment.getWriter())) // 차단한 유저가 작성한 댓글은 제외
                 .map(comment -> {
-                    String nickname = (comment.getWriter() != null) ? comment.getWriter().getNickname() : "null"; // 댓글 작성자가 탈퇴한 경우 닉네임 치환
-                    Boolean isLikedByMember = isLikedByMember(comment, member); // 회원의 좋아요 여부 판단
-                    return new CommentDto(comment.getId(), nickname, comment.getContent(), isLikedByMember);
+                    Member writer = comment.getWriter();
+                    Long writerId = (writer == null) ? -1L : writer.getId();
+                    String nickname = (writer == null) ? DELETED_WRITER : writer.getNickname();
+                    String profileImg = (writer == null || writer.getProfileImage() == null)
+                            ? null : writer.getProfileImage().getImgUrl();
+                    String content = comment.getContent();
+                    String createdAt = comment.getCreatedAt()
+                            .format(DateTimeFormatter.ofPattern(TIME_FORMAT));
+                    Boolean isLikedByMember = isLikedByMember(comment, member);
+                    return new CommentDto(comment.getId(), writerId, nickname, profileImg, content, isLikedByMember, createdAt);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
-     * 연관엔티티 id 있는 CommentDto로 변환 (마이페이지 용)
+     * 내가 작성한 댓글 조회용 DTO 리스트로 변환
      */
     @Override
-    public List<MyCommentDto> toMyCommentDtoList(List<Comment> comments, String nickname) {
+    public List<MyCommentDto> toMyCommentDtoList(List<Comment> comments, Member member) {
         return comments.stream()
                 .map(comment -> {
-                    String writerNickname = (nickname != null) ? nickname : comment.getWriter().getNickname();
-                    Long relatedEntityId = comment.getRelatedEntityId();
-
-                    if (comment instanceof PolicyComment) {
-                        return new PolicyCommentDto(comment.getId(), writerNickname, comment.getContent(), relatedEntityId);
-                    } else if (comment instanceof PostComment) {
-                        return new PostCommentDto(comment.getId(), writerNickname, comment.getContent(), relatedEntityId);
-                    } else {
-                        throw new BusinessException(BaseResponseCode.COMMENT_TYPE_UNKNOWN);
-                    }
+                    Long commentId = comment.getId();
+                    String content = comment.getContent();
+                    Long articleId = comment.getArticleId();
+                    String articleType = comment.getArticleType();
+                    String articleTitle = comment.getArticleTitle();
+                    Boolean isLikedByMember = isLikedByMember(comment, member);
+                    int likeCount = comment.getCommentLikes().size();
+                    return new MyCommentDto(commentId, content, articleId,
+                            articleType, articleTitle, isLikedByMember, likeCount);
                 })
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    /**
+     * 좋아요한 댓글 조회용 DTO 리스트로 변환
+     */
+    @Override
+    public List<LikeCommentDto> toLikeCommentDtoList(List<Comment> comments, Member member) {
+        return comments.stream()
+                .map(comment -> {
+                    Long commentId = comment.getId();
+                    Member writer = comment.getWriter();
+                    Long writerId = (writer == null) ? -1L : writer.getId();
+                    String nickname = (writer == null) ? DELETED_WRITER : writer.getNickname();
+                    String content = comment.getContent();
+                    Long articleId = comment.getArticleId();
+                    String articleType = comment.getArticleType();
+                    String articleTitle = comment.getArticleTitle();
+                    Boolean isLikedByMember = isLikedByMember(comment, member);
+                    int likeCount = comment.getCommentLikes().size();
+                    return new LikeCommentDto(commentId, writerId, nickname, content, articleId,
+                            articleType, articleTitle, isLikedByMember, likeCount);
+                })
+                .toList();
     }
 
     /**
